# bloomy

./: .gitignore  Cargo.toml  README.md
src/: argparser.rs  cacher.rs  config.rs  equity.rs  fetcher.rs  main.rs  portfolio.rs  serializer.rs  stocks.rs  table.rs
