[package]
name = "bloomy"
version = "0.1.0"
authors = ["quarterblue <quarterslate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
thiserror = "1.0.24"
crossterm = "0.19.0"
chrono = "0.4.19"
futures = "0.3.5"
tokio = { version = "1.5.0", features = ["full"]}
serde_json = "1.0.64"